# Additive_DFTs

./: .gitignore  2020-10-results_not_in_place.csv  2021-05-results_in_place.csv  CMakeLists.txt  README.md  algo_fft.txt  algo_fft_en.md  cantor_test.cpp  defs.h.in  fft_test.cpp  product_test.cpp  results.csv  results_in_place.csv  runtimes.ods  sha256.c  utils.cpp
include/: additive_fft.h  base.h  cantor.h  decompose_taylor.h  gf2_extension_polynomials.h  helpers.hpp  interleave.h  mateer_gao.h  mateer_gao_alt.h  mg.h  mg_t.h  mg_templates.h  polynomial_product.h  sha256.h  timer.h  utils.h
libcantor/: cantor_basis_bare.cpp  cantor_basis_full.cpp  helpers.cpp
libfft/: additive_fft.cpp  gf2_extension_polynomials.cpp  mateer_gao.cpp  mg.cpp  mg_t.cpp  utils.cpp
